--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,6 +1,10 @@
 .list {
   display: flex;
   gap: 20px;
+  display: flex;
+  width: 1400px;
+  flex-wrap: wrap;
+  /* justify-content: center; */
 }
 
 .contact {
